# DynamicsSim

./: .gitmodules  CMakeLists.txt  README.md
apps/: simulator.cpp
include/dynamics/: Body.hpp  BodySTM.hpp  CR3BP.hpp  Dynamics.hpp  Euler.hpp  GravityModel.hpp  Integrator.hpp  ODE.hpp  RK4.hpp  STMCR3BP.hpp  SystemFacade.hpp  SystemFactory.hpp
include/dynamics/control/: Control.hpp  EnsembleControl.hpp  NoControl.hpp  SimpleControl.hpp
include/vis/: Controller.hpp  Renderer.hpp  types.hpp  view.hpp
src/control/: NoControl.cpp
src/dynamics/: Body.cpp  BodySTM.cpp  CR3BP.cpp  Dynamics.cpp  Euler.cpp  GravityModel.cpp  RK4.cpp  STMCR3BP.cpp  SystemFacade.cpp  SystemFactory.cpp
src/dynamics/control/: EnsembleControl.cpp  NoControl.cpp  SimpleControl.cpp
src/vis/: Controller.cpp  Renderer.cpp  view.cpp
tests/: testBody.cpp  testCR3BP.cpp  testDynamics.cpp  testGravityModel.cpp  testIntegrators.cpp  testSystemFacade.cpp  testSystemFactory.cpp
